cmake_minimum_required(VERSION 2.6)
project(zz_aqi CXX)
set(CMAKE_CXX_FLAGS -std=c++11)
add_executable(zz_aqi zz_aqi.cpp)
include_directories(/usr/include/libxml2)
include_directories(/usr/include/mysql /usr/include/mysql++)
target_link_libraries(zz_aqi xml2 curl mysqlpp)

install(FILES stations.xml db.xml DESTINATION /etc/zz_aqi/)
install(FILES zzaqi.timer zzaqi.service DESTINATION /etc/systemd/system/)
install(TARGETS zz_aqi RUNTIME DESTINATION bin)
